SimpleComplex/Config 1.x, 2017-07-03
------------------------------------
- Ini-based constructor shan't establish source paths unless required;
  that is: if the cache store is new and source ini files thus have to be read.
- Ini-based use CacheBroker persistent cache class instead of setting ttl
  default and ignore on cache store instance.

SimpleComplex/Config 1.x, 2017-07-02
------------------------------------
- New control instance var parseTyped.
- Added escapeSourceKeys and parseTyped to explorable instance vars.
- Added example .ini file.
- Ini based config support safe mode 'candidate' cache build;
  spells far safer refresh().
- Export from cache.

SimpleComplex/Config 1.x, 2017-07-01
------------------------------------
- .ini based export from sources, as JSON to file.

SimpleComplex/Config 1.x, 2017-06-30
------------------------------------
- .ini-based custom file extensions find filter.
- Vars of a section used in more .ini files in same must be merged;
  not union'ed.
- ctype_digit() is no good when non-string input.
- Support escape/unescape of illegal .ini key names (yes, no etc.).
- Err on no .ini files found, not just on no vars found.

SimpleComplex/Config 1.x, 2017-06-29
------------------------------------
- New config type IniSectionedFlatConfig, which uses .ini file [section]s
  but flattens (concats) section+key in accessors and cache store.

SimpleComplex/Config 1.x, 2017-06-28
------------------------------------
- Use dependency injection container instead of getInstance() when possible.

SimpleComplex/Config 1.x, 2017-06-24
------------------------------------
- IniConfigBase is of course an abstract class; even if it doesn't declare
  abstract methods.
- SectionedWrapper, IniConfig and IniSectionedConfig shan't have getInstance()
  method, because it doesn't make sense as a general principle for configuration
  classes. Whereas EnvConfig and EnvSectionedConfig can have getInstance()