@@ -195,8 +195,9 @@ class IniSectionedFlatConfig extends IniConfigBase implements SectionedConfigInt
     /**
      * Paths to where configuration .ini-files reside.
      *
-     * Base configuration should work in dev/test environments.
-     * Overriding configuration should consist of productions settings.
+     * Base configuration should work in any (or no) environment.
+     * Override configuration should consist of overriding/completing
+     * production _or_ dev/test settings.
      *
      * Relative path is relative to document root.
      *
@@ -204,7 +205,7 @@ class IniSectionedFlatConfig extends IniConfigBase implements SectionedConfigInt
      */
     const PATH_DEFAULTS = [
         'base' => '../conf/ini-sectioned-flat/base',
-        'override' => '../conf/ini-sectioned-flat/operations',
+        'override' => '../conf/ini-sectioned-flat/override',
     ];
 
     /**
